gen/com/company/GParser.java
// Generated from C:/Users/user/Desktop/Lang/src/com/company\G.g4 by ANTLR 4.7.2
package com.company;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		TYPE=32, START=33, IDENTIFIER=34, NUM=35, WS=36, DOUBLE=37, STRING=38;
	public static final int
		RULE_program = 0, RULE_statementwa = 1, RULE_statement = 2, RULE_expression = 3, 
		RULE_expressionint = 4, RULE_expressionall = 5, RULE_expressiondoub = 6, 
		RULE_expressionst = 7, RULE_branch = 8, RULE_trueblockstart = 9, RULE_falseblockstart = 10, 
		RULE_trueblockstop = 11, RULE_falseblockstop = 12, RULE_blockTrue = 13, 
		RULE_blockFalse = 14, RULE_whileloop = 15, RULE_whileblockstart = 16, 
		RULE_loopbegin = 17, RULE_whileblockstop = 18, RULE_forloop = 19, RULE_forend = 20, 
		RULE_starti = 21, RULE_forblock = 22, RULE_varcalc = 23, RULE_blockloop = 24, 
		RULE_varDeclaration = 25, RULE_varDeclarationlocal = 26, RULE_paramDeclaration = 27, 
		RULE_objectDec = 28, RULE_objectAssign = 29, RULE_equals = 30, RULE_varDeclarationArray = 31, 
		RULE_paramDeclarationArray = 32, RULE_assignment = 33, RULE_arraycall = 34, 
		RULE_arraycal = 35, RULE_arraycale = 36, RULE_assignarray = 37, RULE_brace1 = 38, 
		RULE_brace2 = 39, RULE_asstart = 40, RULE_asstop = 41, RULE_assignlist = 42, 
		RULE_comma = 43, RULE_assignmentlocal = 44, RULE_print = 45, RULE_print2 = 46, 
		RULE_print3 = 47, RULE_functionDef = 48, RULE_start = 49, RULE_parameterDeclaration = 50, 
		RULE_parameters = 51, RULE_statementlocal = 52, RULE_statementList = 53, 
		RULE_functionCall = 54, RULE_expressionList = 55, RULE_object = 56, RULE_objectcontext = 57, 
		RULE_objectcall = 58, RULE_lengthcall = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statementwa", "statement", "expression", "expressionint", 
			"expressionall", "expressiondoub", "expressionst", "branch", "trueblockstart", 
			"falseblockstart", "trueblockstop", "falseblockstop", "blockTrue", "blockFalse", 
			"whileloop", "whileblockstart", "loopbegin", "whileblockstop", "forloop", 
			"forend", "starti", "forblock", "varcalc", "blockloop", "varDeclaration", 
			"varDeclarationlocal", "paramDeclaration", "objectDec", "objectAssign", 
			"equals", "varDeclarationArray", "paramDeclarationArray", "assignment", 
			"arraycall", "arraycal", "arraycale", "assignarray", "brace1", "brace2", 
			"asstart", "asstop", "assignlist", "comma", "assignmentlocal", "print", 
			"print2", "print3", "functionDef", "start", "parameterDeclaration", "parameters", 
			"statementlocal", "statementList", "functionCall", "expressionList", 
			"object", "objectcontext", "objectcall", "lengthcall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'/'", "'*'", "'-'", "'+'", "'<'", "'>'", "'>='", "'<='", 
			"'=='", "'if'", "'('", "')'", "'else'", "'}'", "'while'", "'for'", "'++'", 
			"'Class'", "'='", "'['", "']'", "'new'", "','", "'println'", "'printlns'", 
			"'printlnd'", "'return'", "'void'", "'.'", "'arraylength'", null, "'{'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "TYPE", "START", "IDENTIFIER", 
			"NUM", "WS", "DOUBLE", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "G.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionDefContext> functionDef() {
			return getRuleContexts(FunctionDefContext.class);
		}
		public FunctionDefContext functionDef(int i) {
			return getRuleContext(FunctionDefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(120);
					statement();
					}
					break;
				case 2:
					{
					setState(121);
					functionDef();
					}
					break;
				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__28) | (1L << TYPE) | (1L << IDENTIFIER) | (1L << NUM) | (1L << DOUBLE) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementwaContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Print2Context print2() {
			return getRuleContext(Print2Context.class,0);
		}
		public Print3Context print3() {
			return getRuleContext(Print3Context.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VarDeclarationArrayContext varDeclarationArray() {
			return getRuleContext(VarDeclarationArrayContext.class,0);
		}
		public AssignarrayContext assignarray() {
			return getRuleContext(AssignarrayContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ObjectAssignContext objectAssign() {
			return getRuleContext(ObjectAssignContext.class,0);
		}
		public StatementwaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementwa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterStatementwa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitStatementwa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitStatementwa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementwaContext statementwa() throws RecognitionException {
		StatementwaContext _localctx = new StatementwaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementwa);
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				print();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				print2();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				print3();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				varDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				assignment();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(132);
				varDeclarationArray();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(133);
				assignarray();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(134);
				object();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(135);
				objectAssign();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementwaContext statementwa() {
			return getRuleContext(StatementwaContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public WhileloopContext whileloop() {
			return getRuleContext(WhileloopContext.class,0);
		}
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public ObjectDecContext objectDec() {
			return getRuleContext(ObjectDecContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__24:
			case T__25:
			case T__26:
			case TYPE:
			case IDENTIFIER:
			case NUM:
			case DOUBLE:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(138);
				statementwa();
				setState(139);
				match(T__0);
				}
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				branch();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				whileloop();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				forloop();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 5);
				{
				setState(144);
				objectDec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionintContext expressionint() {
			return getRuleContext(ExpressionintContext.class,0);
		}
		public ExpressiondoubContext expressiondoub() {
			return getRuleContext(ExpressiondoubContext.class,0);
		}
		public ExpressionallContext expressionall() {
			return getRuleContext(ExpressionallContext.class,0);
		}
		public ExpressionstContext expressionst() {
			return getRuleContext(ExpressionstContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				expressionint(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				expressiondoub(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				expressionall();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				expressionst(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionintContext extends ParserRuleContext {
		public ExpressionintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionint; }
	 
		public ExpressionintContext() { }
		public void copyFrom(ExpressionintContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariableContext extends ExpressionintContext {
		public Token var;
		public TerminalNode IDENTIFIER() { return getToken(GParser.IDENTIFIER, 0); }
		public VariableContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulContext extends ExpressionintContext {
		public ExpressionintContext left;
		public ExpressionintContext right;
		public List<ExpressionintContext> expressionint() {
			return getRuleContexts(ExpressionintContext.class);
		}
		public ExpressionintContext expressionint(int i) {
			return getRuleContext(ExpressionintContext.class,i);
		}
		public MulContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterMul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitMul(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitMul(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CalllengthContext extends ExpressionintContext {
		public LengthcallContext lengthcall() {
			return getRuleContext(LengthcallContext.class,0);
		}
		public CalllengthContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterCalllength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitCalllength(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitCalllength(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumContext extends ExpressionintContext {
		public Token Num;
		public TerminalNode NUM() { return getToken(GParser.NUM, 0); }
		public NumContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitNum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitNum(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GreaterthanContext extends ExpressionintContext {
		public ExpressionintContext left;
		public ExpressionintContext right;
		public List<ExpressionintContext> expressionint() {
			return getRuleContexts(ExpressionintContext.class);
		}
		public ExpressionintContext expressionint(int i) {
			return getRuleContext(ExpressionintContext.class,i);
		}
		public GreaterthanContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterGreaterthan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitGreaterthan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitGreaterthan(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallObjectintContext extends ExpressionintContext {
		public ObjectcallContext objectcall() {
			return getRuleContext(ObjectcallContext.class,0);
		}
		public CallObjectintContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterCallObjectint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitCallObjectint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitCallObjectint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArraynameContext extends ExpressionintContext {
		public ArraycallContext arraycall() {
			return getRuleContext(ArraycallContext.class,0);
		}
		public ArraynameContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterArrayname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitArrayname(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitArrayname(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarlocalContext extends ExpressionintContext {
		public Token varlocal;
		public TerminalNode IDENTIFIER() { return getToken(GParser.IDENTIFIER, 0); }
		public VarlocalContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterVarlocal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitVarlocal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitVarlocal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LessthanContext extends ExpressionintContext {
		public ExpressionintContext left;
		public ExpressionintContext right;
		public List<ExpressionintContext> expressionint() {
			return getRuleContexts(ExpressionintContext.class);
		}
		public ExpressionintContext expressionint(int i) {
			return getRuleContext(ExpressionintContext.class,i);
		}
		public LessthanContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterLessthan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitLessthan(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitLessthan(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncCallExpressionContext extends ExpressionintContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FuncCallExpressionContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterFuncCallExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitFuncCallExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitFuncCallExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DivContext extends ExpressionintContext {
		public ExpressionintContext left;
		public ExpressionintContext right;
		public List<ExpressionintContext> expressionint() {
			return getRuleContexts(ExpressionintContext.class);
		}
		public ExpressionintContext expressionint(int i) {
			return getRuleContext(ExpressionintContext.class,i);
		}
		public DivContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GreaterorequalContext extends ExpressionintContext {
		public ExpressionintContext left;
		public ExpressionintContext right;
		public List<ExpressionintContext> expressionint() {
			return getRuleContexts(ExpressionintContext.class);
		}
		public ExpressionintContext expressionint(int i) {
			return getRuleContext(ExpressionintContext.class,i);
		}
		public GreaterorequalContext(ExpressionintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).enterGreaterorequal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GListener ) ((GListener)listener).exitGreaterorequal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GVisitor ) return ((GVisitor<? extends T>)visitor).visitGreaterorequal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqualContext extends ExpressionintContext {
		public ExpressionintContext left;
